# mc_cookbook_kiwi_talk_2023

./: .gitignore  0_basic_mc_example.py  1_ttest_applicability.py  2_catching_wrong_relative_criteria.py  3_play_with_outlier_filtering.py  README.md  monte_carlo_cookbook.ipynb  presentation.ipynb  pyproject.toml
tools/: config.py  deck_pictures.py  distributions.py  helper.py  statistics.py  vizualization.py
